objects/GeEF_Exception__c.object
<CustomObject>
    <description>Ge - General
EF - Exceptions Framework

Used to store exceptions for later annalysis or review</description>
    <label>Exception</label>
    <nameField>
        <label>Exception Logging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>GeEF_Endpoint__c</fullName>
        <description>The endpoint called</description>
        <label>Endpoint</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeEF_Line_Number__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
The line number in the class where the exception was thrown</description>
        <label>Line Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeEF_Stack_Trace__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
The stack trace of the exception</description>
        <label>Stack Trace</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeEF_Status_Code__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
The status code returned (if the exception was caused by a web service)</description>
        <label>Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeEF_Request_Body__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
The body of the web service request which caused the exception</description>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeEF_Response_Body__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
The response returned in the web service which caused the exception</description>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeEF_Exception_Type__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
The type of exception that has been thrown (e.g. DMLException, MathException, etc.)</description>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeEF_Exception_Message__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
The message which is seen by the user</description>
        <label>Exception Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeEF_EnterpriseUniqueId__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
This field is used to uniquely identify records across the enterprise.
This will be used in Data Migrations and also when communicating Via the API to external Systems.</description>
        <externalId>true</externalId>
        <label>Enterprise Unique ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeEF_Web_Service_Method__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
The web service method which was used when the exception occurred (e.g. GET, POST, PUT, PATCH</description>
        <label>Web Service Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeEF_Custom_Error_Message__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
A custom error message which was provided when the exception was caught</description>
        <label>Custom Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeEF_EnterpriseUniqueIdSeq__c</fullName>
        <description>Ge - General
EF - Exceptions Framework
This field is used to generate a unique number that is inserted into Enterprise Unique Id by a workflow if no value already exists.</description>
        <displayFormat>EXC-{000000000}</displayFormat>
        <label>Enterprise Unique ID Sequence Number</label>
        <type>AutoNumber</type>
    </fields>
    <recordTypes>
        <fullName>General_Exception</fullName>
        <active>true</active>
        <description>Models an exception which has been thrown</description>
        <label>General Exception</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Service_Exception</fullName>
        <active>true</active>
        <description>Models an exception which has been thrown as part of a web service callout</description>
        <label>Web Service Exception</label>
    </recordTypes>
</CustomObject>